[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://MOB.tscn" type="PackedScene" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://Fcuk-APWAAYgPqs.jpg" type="Texture" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://ytmp3free.cc_the-amazing-digital-circus-theme-sped-up-pitched-youtubemp3free.org.mp3" type="AudioStream" id=6]
[ext_resource path="res://ytmp3free.cc_you-parasite-the-amazing-digital-circus-youtubemp3free.org.mp3" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="main" type="Node"]
script = ExtResource( 3 )
mob_scene = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MOBTIMER" type="Timer" parent="."]
wait_time = 0.5

[node name="SCORETIMER" type="Timer" parent="."]

[node name="STARTTIMER" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPOSITION" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MOBPARTH" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MOBsparnloc" type="PathFollow2D" parent="MOBPARTH"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2( 8, 8 )
transform = Transform2D( 8, 0, 0, 8, 0, 0 )

[node name="Fcuk-ApwaaygPqs" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 30, 45 )
scale = Vector2( 0.09375, 0.12 )
texture = ExtResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 7.446
pitch_scale = 1.06
autoplay = true

[node name="youparasite" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 18.713
pitch_scale = 1.32

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MOBTIMER" to="." method="_on_MOBTIMER_timeout"]
[connection signal="timeout" from="SCORETIMER" to="." method="_on_SCORETIMER_timeout"]
[connection signal="timeout" from="STARTTIMER" to="." method="_on_STARTTIMER_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
